--- a/src/components/CircleImage.css
+++ b/src/components/CircleImage.css
@@ -9,7 +9,7 @@
     height: 8rem;
     width: 8rem;
     border-radius: 50%;
-    background-color: navajowhite;
+    background-color: #8EB9D3;
     text-align: center;
     padding: 0.5rem;
 }
