--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,11 +5,20 @@
     padding: 1rem 2rem;
 }
 
+.header_logo>img {
+    width: 10rem;
+    object-fit: contain;
+}
+
 
 .menuItems {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.menuItems>a {
+    text-decoration: none;
 }
 
 .searchwithPrescreption {
@@ -37,6 +46,7 @@
     margin: 0.4rem;
     width: 90%;
     background-color: #E7EDFF;
+    padding: 0.5rem 0.5rem;
 }
 
 .searchbar_input:focus {
