--- a/src/OrderSummary.css
+++ b/src/OrderSummary.css
@@ -107,3 +107,23 @@
     padding: 0 1rem;
     cursor: pointer;
 }
+
+
+@media (max-width:900px) {
+    .OrderSummary {
+        width: 80%;
+    }
+}
+
+@media (max-width:600px) {
+    .OrderSummary {
+        width: 95%;
+    }
+}
+
+@media (max-width:500px) {
+    .OrderSummary {
+        width: 95%;
+        font-size: 80%;
+    }
+}
