--- a/src/components/CircleImage.css
+++ b/src/components/CircleImage.css
@@ -18,3 +18,16 @@
     font-weight: bold;
     margin: 0;
 }
+
+@media (max-width: 800px) {
+    .selfCheck_icons {
+        margin: 0.5rem;
+    }
+}
+
+@media (max-width: 700px) {
+    .selfCheck_circle {
+        height: 5rem;
+        width: 5rem;
+    }
+}
