--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     padding: 1rem 2rem;
 }
 
@@ -66,4 +67,41 @@
 
 .selectState>select:focus {
     outline: none;
+}
+
+@media(max-width : 900px) {
+    .header_main {
+        padding: 0.5rem;
+    }
+
+    .header_logo>img {
+        width: 8rem;
+        object-fit: contain;
+    }
+
+}
+
+@media(max-width : 550px) {
+    .header_menu {
+        display: none;
+    }
+
+    .searchwithPrescreption {
+        position: relative;
+    }
+
+    .selectState {
+        position: absolute;
+        top: -3rem;
+        right: 0;
+    }
+
+    .uploadPrescription>.header__options {
+        margin: 0;
+    }
+
+    .searchbar {
+        margin-right: 3rem;
+    }
+
 }
