--- a/src/components/LabTestCard.css
+++ b/src/components/LabTestCard.css
@@ -87,3 +87,56 @@
 
 
 }
+
+@media (max-width:1350px) {
+    .card_description {
+        width: 20rem;
+    }
+}
+
+@media (max-width:1200px) {
+    .card_description {
+        width: 25rem;
+    }
+}
+
+@media (max-width:700px) {
+    .card_description {
+        width: 15rem;
+    }
+
+    .labtest_card {
+        margin: 1rem 0.5rem;
+        padding: 1rem;
+    }
+}
+
+@media (max-width:500px) {
+    .card_price>h3 {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width:400px) {
+    .card_description {
+        width: 13rem;
+    }
+
+    .card_knowMore {
+        font-size: 0.8rem;
+        padding: 0.5rem;
+    }
+
+    .card_offer {
+        font-size: 0.8rem;
+        margin: 0.5rem 0.25rem;
+    }
+
+    .labtest_card {
+        padding: 0.5rem;
+    }
+
+    .card_price>h3 {
+        font-size: 1rem;
+    }
+}
