--- a/src/HealthTests/Radiology/Radiology.css
+++ b/src/HealthTests/Radiology/Radiology.css
@@ -1,25 +1,41 @@
 .radiology {
-    width: 100%;
+    width: fit-content;
     height: 100%;
+    background-color: whitesmoke;
+}
+
+.radiology > .heading_radiology {
+    padding-left: 15px;
+    font-size:x-large;
+    color: blue;
+    font-weight: 500;
+    width: fit-content;
+    background-color: white;
+
 }
 
 .radiology_cards {
     display: flex;
     flex-wrap:wrap;
     justify-content: center;
+    padding: 10px;
+    padding-top: 5px;
+    background-color: white;
 }
 
 .radiology_card {
-    width: 400px;
     height: 250px;
     margin: 10px;
+    max-width: 500px;
     background-color: rgb(195, 242, 227);
     border-radius: 10px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .redtext {
     padding-left: 10px;
-    font-size: small;
+    font-size: medium;
+    font-weight: 500;
     color: red;
     padding-top: 5px;
 }
@@ -31,7 +47,7 @@
 
 .heading_and_discount > .heading {
     flex: 1;
-    font-size:large;
+    font-size:22px;
     font-weight: bolder;
     padding-left: 10px;
     padding-top: 10px;
@@ -61,14 +77,14 @@
 }
 
 .price > button {
-    width: 100px;
-    height: 30px;
+    width: 125px;
+    height: 40px;
     background-color: rgb(0, 110, 255);
     border: 1px var(--color-light);
     border-radius: 5px;
     color: white;
-    font-weight: bold;
-    font-size: medium;
+    font-weight: bolder;
+    font-size: 20px;
 }
 
 .actual_price {
@@ -80,20 +96,18 @@
 .content {
     width: 50%;
     flex: 1;
-    font-size: small;
+    font-size: medium;
 }
 
 @media (max-width: 800px) {
     .radiology_cards {
         display: flex;
         flex-direction: column;
-        position: absolute;
-        
+        grid-template-columns: auto;
+        align-items: center;
     }
 
     .radiology_card {
-        width: 500px;
-        min-width: 500px;
         height: 250px;
         align-self: center;
     }
