--- a/src/components/LabTestCard.css
+++ b/src/components/LabTestCard.css
@@ -115,6 +115,14 @@
     .card_price>h3 {
         font-size: 1.2rem;
     }
+
+    .card_availabity>h3 {
+        font-size: 1.2rem;
+    }
+
+    .card_knowMore {
+        padding: 0.5rem;
+    }
 }
 
 @media (max-width:400px) {
