--- a/src/second/TestPakages.css
+++ b/src/second/TestPakages.css
@@ -34,8 +34,17 @@
     }
 
     .indiTan {
+        font-size: 1.2rem;
+        font-weight: bolder;
+        margin: 0 1.5rem;
+    }
+}
+
+@media (max-width:400px) {
+
+    .indiTan {
         font-size: 1rem;
-        font-weight: bold;
-        margin: 0 2rem;
+        font-weight: bolder;
+        margin: 0 1.5rem;
     }
 }
