--- a/src/components/PrescriptionDialog.css
+++ b/src/components/PrescriptionDialog.css
@@ -1,3 +1,14 @@
+.my_modal {
+  position: fixed; /* Stay in place */
+  z-index: 1;
+  width: 200%; /* Full width */
+  height: 500%; /* Full height */
+  left: 0;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+}
+
 .close_button {
   font-weight: bolder;
   cursor: pointer;
@@ -27,11 +38,13 @@
   overflow: auto;
   border-radius: 4px;
   outline: none;
+  position: fixed;
 }
 
 ::placeholder {
   color: black
 }
+
 
 @media (max-width:800px) {
   .dialog_body {
