--- a/src/components/CircleImage.css
+++ b/src/components/CircleImage.css
@@ -9,7 +9,7 @@
     height: 8rem;
     width: 8rem;
     border-radius: 50%;
-    background-color: #e7f3fb;
+    background-color: #ffffff;
     text-align: center;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     padding: 0.5rem;
@@ -17,6 +17,7 @@
 
 .selfCheck_icons>h3 {
     font-weight: bold;
+    color: #000C83;
     margin: 0;
 }
 
@@ -35,7 +36,13 @@
 
 @media (max-width: 500px) {
     .selfCheck_circle>img {
-        height: 4rem;
-        width: 4rem;
+        height: 3rem;
+        width: 3rem;
+    }
+
+    .selfCheck_icons>h3 {
+        font-weight: bold;
+        font-size: 0.8rem;
+        margin-top: 0.2rem;
     }
 }
