--- a/src/components/LabTestCard.css
+++ b/src/components/LabTestCard.css
@@ -2,7 +2,7 @@
     margin: 1rem;
     padding: 1rem 2rem;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    border-radius: 0.6rem;
+    border-radius: 0.4rem;
 }
 
 .labtest_card:nth-child(even) {
@@ -77,7 +77,7 @@
     border: none;
     padding: 1rem;
     font-weight: bold;
-    border-radius: 0.6rem;
+    border-radius: 0.4rem;
     cursor: pointer;
     background-color: rgb(255, 255, 255);
 }
@@ -106,22 +106,47 @@
     }
 
     .labtest_card {
-        margin: 1rem 0.5rem;
+        margin: 1rem 0rem;
         padding: 1rem;
+        width: 90%;
     }
 }
 
 @media (max-width:500px) {
+
     .card_price>h3 {
-        font-size: 1.2rem;
+        font-size: 0.8rem;
     }
 
-    .card_availabity>h3 {
-        font-size: 1.2rem;
+    .card_price>span {
+        font-size: 1rem;
+        font-weight: bolder;
+    }
+
+    .card_availabity>h3,
+    .card_availabity>span {
+        font-size: 0.7rem;
+        font-weight: bolder;
     }
 
     .card_knowMore {
+        font-size: 0.7rem;
         padding: 0.5rem;
+    }
+
+
+    .card_heading>h3 {
+        font-size: 0.9rem;
+    }
+
+    .card_offer {
+        font-size: 0.8rem;
+        margin: 0.5rem 0.25rem;
+    }
+
+    .card_heading>h4,
+    .card_description>p {
+        font-size: 0.7rem;
     }
 }
 
@@ -130,21 +155,17 @@
         width: 13rem;
     }
 
-    .card_knowMore {
-        font-size: 0.8rem;
-        padding: 0.5rem;
-    }
 
     .card_offer {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         margin: 0.5rem 0.25rem;
     }
 
     .labtest_card {
-        padding: 0.5rem;
+        padding: 0.5rem 1rem;
     }
 
     .card_price>h3 {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 }
