--- a/src/components/Crousels/MobileCrousel.css
+++ b/src/components/Crousels/MobileCrousel.css
@@ -1,10 +1,10 @@
-@keyframes slidy2 {
+@keyframes slidy {
     0% {
-        left: -50%;
+        left: 0%;
     }
 
     20% {
-        left: -50%;
+        left: 0%;
     }
 
     25% {
@@ -16,82 +16,66 @@
     }
 
     50% {
-        left: -150%;
+        left: -200%;
     }
 
     70% {
-        left: -150%;
+        left: -200%;
     }
 
     75% {
-        left: -200%;
+        left: -300%;
     }
 
     95% {
-        left: -200%;
+        left: -300%;
     }
 
     100% {
-        left: -250%;
+        left: -400%;
     }
 }
-
 
 body {
     margin: 0;
 }
 
-div#slider {
+div#slider1 {
     overflow: hidden;
 }
 
-div#slider figure div {
+div#slider1 figure div {
 
     width: 25%;
     float: left;
     padding: 1rem 20rem;
     box-sizing: border-box;
-    margin: 1rem 4rem;
 }
 
-div#slider figure div img {
-    width: 47rem;
+div#slider1 figure div img {
+    width: 100%;
     object-fit: contain;
     border-radius: 0.4rem;
 }
 
-div#slider figure {
+div#slider1 figure {
     position: relative;
-    display: flex;
+    width: 400%;
     margin: 0;
     left: 0;
     text-align: left;
     font-size: 0;
-    animation: 10s slidy2 ease-in-out infinite;
-}
-
-@media (max-width : 700px) {
-    div#slider figure div {
-        float: center;
-    }
+    animation: 10s slidy infinite;
 }
 
 @media(max-width: 450px) {
-    div#slider figure div {
+    div#slider1 figure div {
         padding: 0.5rem 0.8rem;
     }
 
-    div#slider figure div img {
+    div#slider1 figure div img {
         width: 100%;
         object-fit: contain;
         border-radius: 0.4rem;
     }
-
-    div#slider figure {
-        display: block;
-        width: 600%;
-        animation: 10s slidy ease-in-out infinite;
-    }
-
-
 }
