--- a/src/components/LabTestCard.css
+++ b/src/components/LabTestCard.css
@@ -1,7 +1,7 @@
 .labtest_card {
     margin: 1rem;
     padding: 1rem 2rem;
-    /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     border-radius: 0.4rem;
 }
 
@@ -46,17 +46,17 @@
 }
 
 .card_description {
-    width: 25rem;
+    width: 18rem;
 }
 
 .card_price>h3,
 .card_availabity>h3 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin: 0;
     font-weight: 600;
 }
 
-.card_price>span {
+.card_price>div>span {
     font-size: 1.3rem;
 }
 
@@ -79,11 +79,12 @@
 .card_knowMore {
     font-size: 1rem;
     border: none;
-    padding: 1rem;
+    padding: 0.5rem;
     font-weight: bold;
     border-radius: 0.4rem;
     cursor: pointer;
     background-color: rgb(255, 255, 255);
+
 }
 
 .card_knowMore:hover {
@@ -109,10 +110,12 @@
         width: 15rem;
     }
 
+
     .labtest_card {
         margin: 1rem 0rem;
         padding: 1rem;
         width: 90%;
+        box-shadow: none;
     }
 }
 
