--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.5rem 3rem;
     background-color: white;
 }
 
@@ -60,7 +60,7 @@
 }
 
 .header_logo>img {
-    width: 10rem;
+    width: 12rem;
     object-fit: contain;
 }
 
@@ -76,7 +76,7 @@
 }
 
 .searchwithPrescreption {
-    /* width: 100%; */
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -84,13 +84,14 @@
 
 
 .searchbar {
-    width: 100%;
+    width: 60%;
     display: flex;
     align-items: center;
     border: 1px solid rgb(181, 181, 181);
     border-radius: 0.4rem;
     /* margin-right: 0.5rem; */
     background-color: #E7EDFF;
+    margin-left: 8rem;
 
 }
 
@@ -125,6 +126,7 @@
 
 .uploadPrescription {
     padding: 0.25rem;
+    margin-right: 9rem;
 }
 
 .selectState>select {
@@ -138,6 +140,123 @@
     outline: none;
 }
 
+
+/* For DropDown Profile Menu */
+
+.action {
+    position: fixed;
+    right: 30px;
+    top: 20px;
+}
+
+.action .menu {
+    background-color: #ffffff;
+    box-sizing: 0 5px 25px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    padding: 10px 20px;
+    position: absolute;
+    right: -10px;
+    width: 230px;
+    transition: 0.5s;
+    top: 80px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.action .menu.active {
+    opacity: 1;
+    top: 120px;
+    visibility: visible;
+}
+
+.action .menu::before {
+    background-color: #fff;
+    content: '';
+    height: 20px;
+    position: absolute;
+    right: 30px;
+    transform: rotate(45deg);
+    top: -5px;
+    width: 20px;
+}
+
+.action .menu h3 {
+    color: #555;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.3em;
+    padding: 20px 0px;
+    text-align: left;
+    width: 100%;
+}
+
+.action .menu h3 div {
+    color: #818181;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.action .menu ul li {
+    align-items: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    display: flex;
+    justify-content: left;
+    list-style: none;
+    padding: 10px 0px;
+}
+
+.action .menu ul li img {
+    max-width: 20px;
+    margin-right: 10px;
+    opacity: 0.5;
+    transition: 0.25s
+}
+
+.action .menu ul li a {
+    display: inline-block;
+    color: #555;
+    font-size: 14px;
+    font-weight: 600;
+    padding-left: 15px;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: 0.5s;
+}
+
+.action .menu ul li:hover img {
+    opacity: 1;
+}
+
+.action .menu ul li:hover a {
+    color: #000C83;
+}
+
+.action .menu ul li:last-child:hover a {
+    color: rgb(216, 5, 5);
+}
+
+.sidebar_icons1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sidebar_icons1 .icon_name1 {
+    margin-left: 0.8rem;
+}
+
+@media (max-width : 1000px) {
+    .searchbar {
+        margin-left: 5rem;
+
+    }
+
+    .uploadPrescription {
+        padding: 0.25rem;
+        margin-right: 5rem;
+    }
+}
+
 @media(max-width : 900px) {
     .header_main {
         padding: 0.5rem;
@@ -148,9 +267,24 @@
         object-fit: contain;
     }
 
+    .uploadPrescription {
+        padding: 0.25rem;
+        margin-right: 3rem;
+    }
+
 }
 
 @media(max-width : 550px) {
+    .searchbar {
+        width: 100%;
+        margin-left: 0rem;
+
+    }
+
+    .uploadPrescription {
+        padding: 0.25rem;
+        margin-right: 0rem;
+    }
 
     .header_main {
         flex-wrap: wrap;
