--- a/src/First/LandingPage.css
+++ b/src/First/LandingPage.css
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: auto auto;
     align-items: center;
+    padding: 0rem 3rem;
 }
 
 .first_section {
@@ -195,6 +196,7 @@
 @media(max-width: 900px) {
     .firstForDesktop {
         display: block;
+        padding: 0;
     }
 
     .desktopElement {
