--- a/src/DesktopPages/PopularPakages.css
+++ b/src/DesktopPages/PopularPakages.css
@@ -98,11 +98,12 @@
 }
 
 
-.MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation6.MuiSnackbarContent-root.css-1gz1y6s {
+.MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation6.MuiSnackbarContent-root.css-1eqdgzv-MuiPaper-root-MuiSnackbarContent-root {
     background-color: #0EB6FF;
     font-size: 1.2rem;
 
 }
+
 
 .checkoutButton {
     background-color: #000C83;
