--- a/src/components/CircleImage.css
+++ b/src/components/CircleImage.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin: 0.5rem 2rem;
+    text-align: center;
 }
 
 .selfCheck_circle>img {
@@ -19,6 +20,7 @@
     font-weight: bold;
     color: #000C83;
     margin: 0;
+    text-align: center;
 
 }
 
